// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FunctionDeclaration 1`] = `
{
  "body": [
    {
      "body": [],
      "id": {
        "location": {
          "end": {
            "column": 16,
            "line": 1,
            "offset": 15,
          },
          "source": "",
          "start": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "name": "MyFunction",
        "type": "Identifier",
      },
      "location": {
        "end": {
          "column": 20,
          "line": 2,
          "offset": 37,
        },
        "source": "",
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "params": [],
      "type": "FunctionDeclaration",
      "volatile": false,
    },
  ],
  "type": "Program",
}
`;

exports[`FunctionDeclaration 2`] = `
{
  "body": [
    {
      "body": [],
      "id": {
        "location": {
          "end": {
            "column": 16,
            "line": 1,
            "offset": 15,
          },
          "source": "",
          "start": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "name": "MyFunction",
        "type": "Identifier",
      },
      "location": {
        "end": {
          "column": 20,
          "line": 2,
          "offset": 55,
        },
        "source": "",
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "params": [
        {
          "byref": false,
          "const": false,
          "id": {
            "location": {
              "end": {
                "column": 19,
                "line": 1,
                "offset": 18,
              },
              "source": "",
              "start": {
                "column": 17,
                "line": 1,
                "offset": 16,
              },
            },
            "name": "a",
            "type": "VariableIdentifier",
          },
          "init": null,
          "location": {
            "end": {
              "column": 19,
              "line": 1,
              "offset": 18,
            },
            "source": "",
            "start": {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
          },
          "type": "Parameter",
        },
        {
          "byref": true,
          "const": true,
          "id": {
            "location": {
              "end": {
                "column": 35,
                "line": 1,
                "offset": 34,
              },
              "source": "",
              "start": {
                "column": 33,
                "line": 1,
                "offset": 32,
              },
            },
            "name": "b",
            "type": "VariableIdentifier",
          },
          "init": null,
          "location": {
            "end": {
              "column": 35,
              "line": 1,
              "offset": 34,
            },
            "source": "",
            "start": {
              "column": 21,
              "line": 1,
              "offset": 20,
            },
          },
          "type": "Parameter",
        },
      ],
      "type": "FunctionDeclaration",
      "volatile": false,
    },
  ],
  "type": "Program",
}
`;
